--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "angular2-chartjs": "^0.5.0",
     "cerialize": "^0.1.18",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
